--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "node app.js",
-    "test": "jest --verbose --coverage"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,7 @@
     "@slack/bolt": "^3.13.1",
     "dotenv": "^16.1.4",
     "eslint": "^8.42.0",
+    "googleapis": "^129.0.0",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1"
   },
