--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "jest --verbose --coverage"
   },
   "keywords": [],
@@ -12,6 +13,7 @@
     "@slack/bolt": "^3.13.1",
     "dotenv": "^16.1.4",
     "eslint": "^8.42.0",
+    "node-schedule": "^2.1.1",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1"
   },
