--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,9 @@
+#Slack API
 SLACK_SIGNING_SECRET=<your_token_here>
 SLACK_BOT_TOKEN=<your_token_here>
 SLACK_APP_TOKEN=<your_token_here>
 OPENAI_API_KEY=<your_token_here>
 PORT=<YOUR_PORT>
+
+#Open AI
+OPENAI_API_KEY=sk-<your openai key>
