--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@slack/bolt": "^3.13.1",
     "dotenv": "^16.1.4",
     "eslint": "^8.42.0",
+    "node-cron": "^3.0.3",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1"
   },
